Comment scripts and rerun code

--- a/script_2024_cases_as_csv.ipynb
+++ b/script_2024_cases_as_csv.ipynb
@@ -11,14 +11,25 @@
     "import pandas as pd\n",
     "\n",
     "TRANSCRIPTS_DIR = \"2024_cases_json/\"      # directory of JSONs of oral arguments\n",
-    "CSV_DIR = \"2024_cases_csv\"         # directory in which to store csv of aggregated oral arguments\n",
     "\n",
     "def get_formatted_text_of_turn(turn):\n",
+    "    '''\n",
+    "    Return all text within a turn with xml-like tags denoting speaker and text.\n",
+    "    \n",
+    "    @param turn -- JSON representing a single speaker turn\n",
+    "    @return -- String with xml-like tags\n",
+    "    '''\n",
     "    speaker_in_turn = \"<speaker>\" + turn[\"speaker\"][\"name\"] + \"</speaker>\"\n",
     "    all_text_in_turn = \"<text>\" + \" \".join([block[\"text\"] for block in turn[\"text_blocks\"]]) + \"</text>\"\n",
     "    return speaker_in_turn + all_text_in_turn\n",
     "\n",
     "def get_section_full_text(section_json):\n",
+    "    '''\n",
+    "    Returns the full text of all the text in all turns concatenated together.\n",
+    "\n",
+    "    @param section_json -- JSON representing a section of the oral arguments\n",
+    "    @return -- String all turns in xml-like tagging concatenated together.\n",
+    "    '''\n",
     "    turns = section_json[\"turns\"]\n",
     "    full_text = \"\"\n",
     "    for turn in turns:\n",
@@ -26,6 +37,12 @@
     "    return full_text\n",
     "\n",
     "def get_transcript_dict(json_file_name):\n",
+    "    '''\n",
+    "    Parse JSON oral argument transcript into the respective opening statements and full text.\n",
+    "\n",
+    "    @param json_file_name -- name of oral argument JSON file\n",
+    "    @return -- Dictionary representing transcript.\n",
+    "    '''\n",
     "    transcript_info = {}\n",
     "    transcript_info[\"transcript_id\"] = json_file_name[:-5]\n",
     "\n",
@@ -46,7 +63,10 @@
     "    transcript_info[\"respondent_full_text\"] = get_section_full_text(respondent_turns)\n",
     "\n",
     "    return transcript_info\n",
-    "    \n",
+    "\n",
+    "'''\n",
+    "Parses then adds all 2024 transcript info into csv file with each side's opening statement and full text arguments.\n",
+    "'''\n",
     "transcripts = []\n",
     "cases_dir = os.fsencode(TRANSCRIPTS_DIR)\n",
     "for json_file_name in os.listdir(TRANSCRIPTS_DIR):\n",
@@ -56,7 +76,7 @@
     "    transcripts.append(get_transcript_dict(json_file_name))\n",
     "\n",
     "transcripts_df = pd.DataFrame(transcripts)\n",
-    "transcripts_df.to_csv(CSV_DIR + \"/transcript_parsed\")"
+    "transcripts_df.to_csv(\"2024_full_text_transcripts.csv\")"
    ]
   }
  ],
