Complete k-means code and added 2024 questions

--- a/script_get_all_questions.ipynb
+++ b/script_get_all_questions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,6 @@
     "import os\n",
     "\n",
     "# initialize script variables\n",
-    "TRANSCRIPTS_DIR = \"transcripts_up_to_2024/\"\n",
     "all_questions_list = []\n",
     "\n",
     "def add_questions_from_section(section_json, json_file_name, question_addressee):\n",
@@ -78,6 +77,9 @@
     "'''\n",
     "Main function --> goes through all transcripts and add questions to the global list.\n",
     "'''\n",
+    "TRANSCRIPTS_DIR = \"transcripts_up_to_2024/\"\n",
+    "FILE_TO_SAVE = \"all_questions.csv\"\n",
+    "\n",
     "for json_file_name in os.listdir(TRANSCRIPTS_DIR):\n",
     "    # ignore hidden files\n",
     "    if json_file_name.startswith('.'):\n",
@@ -85,7 +87,7 @@
     "    add_questions_from_transcript(json_file_name)\n",
     "\n",
     "questions_df = pd.DataFrame(all_questions_list)\n",
-    "questions_df.to_csv(\"all_questions.csv\")"
+    "questions_df.to_csv(FILE_TO_SAVE)"
    ]
   },
   {
