--- a/kylie_scripts/script_get_all_questions.ipynb
+++ b/kylie_scripts/script_get_all_questions.ipynb
@@ -100,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oral-arg-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
