--- a/kylie_scripts/test_kmeans_clustering.ipynb
+++ b/kylie_scripts/test_kmeans_clustering.ipynb
@@ -411,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oral-arg-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
