fix paths in notebooks to match new ile structure

--- a/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
+++ b/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f6e9cd56-dc54-4f54-a023-ac88a5c53292",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "input_fp = '2024_all_questions_full_text_merged.csv'\n",
+    "input_fp = '../datasets/2024_all_questions_full_text_merged.csv'\n",
     "df = pd.read_csv(input_fp)\n",
     "df.head()"
    ]
@@ -433,13 +433,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "4ed6ad87-4191-4f5a-a7a2-52f83b0e9963",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_id = model_name.split('/')[-1]\n",
-    "output_fp = f'2024_all_questions_coherence_labeled_{model_id}.csv'\n",
+    "output_fp = f'../datasets/2024_all_questions_coherence_labeled_{model_id}.csv'\n",
     "df.to_csv(output_fp, index=False)"
    ]
   },
