--- a/llm_generation_scripts/generate_legalbench_classification_della_inference.ipynb
+++ b/llm_generation_scripts/generate_legalbench_classification_della_inference.ipynb
@@ -300,7 +300,7 @@
     }
    ],
    "source": [
-    "input_fp = '2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv'\n",
+    "input_fp = '../datasets/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv'\n",
     "df = pd.read_csv(input_fp)\n",
     "df.head()"
    ]
@@ -531,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_fp = '2024_coherent_legalbench_classification.csv'\n",
+    "out_fp = '../datasets/2024_coherent_legalbench_classification.csv'\n",
     "df_coherent.to_csv(out_fp, index=False)"
    ]
   }
