--- a/llm_generation_scripts/generate_metacog_labels_della_inference.ipynb
+++ b/llm_generation_scripts/generate_metacog_labels_della_inference.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c75f0ed9-4fa3-464a-ab18-0499b7a18e19",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
     }
    ],
    "source": [
-    "input_fp = '2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv'\n",
+    "input_fp = '../datasets/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv'\n",
     "df = pd.read_csv(input_fp)\n",
     "df.head()"
    ]
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_fp = '2024_coherent_metacog_labels.csv'\n",
+    "out_fp = '../datasets/2024_coherent_metacog_labels.csv'\n",
     "df_coherent.to_csv(out_fp, index=False)"
    ]
   }
