--- a/llm_generation_scripts/generate_responses_della_inference.ipynb
+++ b/llm_generation_scripts/generate_responses_della_inference.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "c75f0ed9-4fa3-464a-ab18-0499b7a18e19",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "input_fp = '2024_full_text_transcripts.csv'\n",
+    "input_fp = '../datasets/2024_full_text_transcripts.csv'\n",
     "df = pd.read_csv(input_fp)\n",
     "df.head()"
    ]
@@ -1124,12 +1124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "bf625014-6b41-4404-b3e6-611770af9b84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_fp = '2024_full_text_sotomayor_alito_questions.csv'\n",
+    "out_fp = '../datasets/2024_full_text_sotomayor_alito_questions.csv'\n",
     "df.to_csv(out_fp, index=False)"
    ]
   },
@@ -1353,14 +1353,6 @@
     "for q in questions:\n",
     "    print(q)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e4acbbc-e3fb-474c-ab12-be3ebe3e5099",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
