--- a/testing_scripts/test_llama_inference.ipynb
+++ b/testing_scripts/test_llama_inference.ipynb
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "questions_df = pd.read_csv('2024_all_questions_full_text_merged.csv')\n"
+    "questions_df = pd.read_csv('../datasets/2024_all_questions_full_text_merged.csv')\n"
    ]
   },
   {
