--- a/testing_scripts/script_merge_csv_for_coherence_judgments.ipynb
+++ b/testing_scripts/script_merge_csv_for_coherence_judgments.ipynb
@@ -17,16 +17,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_qs_24_df = pd.read_csv('2024_all_questions.csv')\n",
-    "full_text_df = pd.read_csv('2024_full_text_transcripts.csv')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_qs_24_df = pd.read_csv('2024_all_questions.csv')\n",
-    "full_text_df = pd.read_csv('2024_full_text_transcripts.csv')"
+    "all_qs_24_df = pd.read_csv('../datasets/2024_all_questions.csv')\n",
+    "full_text_df = pd.read_csv('../datasets/2024_full_text_transcripts.csv')"
    ]
   },
   {
@@ -375,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_fp = '2024_all_questions_full_text_merged.csv'\n",
+    "out_fp = '../datasets/2024_all_questions_full_text_merged.csv'\n",
     "merged_df_questions.to_csv(out_fp, index=False)"
    ]
   },
