add script for json and legalbench classifications of llm questions

--- a/llm_generation_scripts/generate_legalbench_classification_della_inference.ipynb
+++ b/llm_generation_scripts/generate_legalbench_classification_della_inference.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dce9f408-b45f-4931-ad60-6742bf290a63",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2e7a20db-ba35-4254-b174-e376059bd1e9",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "28dba16f-6115-4450-8593-0c752d017240",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "a16f4f40-898f-4c4c-9ad1-81902c24b5dd",
    "metadata": {},
    "outputs": [],
@@ -184,8 +184,188 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e72c321-3461-448a-92e9-5faa5d02c489",
+   "id": "98f0e480-d264-4c26-ae20-a96fb72cde6d",
    "metadata": {},
+   "source": [
+    "### Run on LLM generated questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eb7496fe-cac1-43f2-9d35-2eb5ac590402",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transcript_id</th>\n",
+       "      <th>question_addressee</th>\n",
+       "      <th>justice</th>\n",
+       "      <th>question_text</th>\n",
+       "      <th>opening_statement</th>\n",
+       "      <th>full_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024.23-621-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>sotomayor</td>\n",
+       "      <td>Can you explain why you believe the Court shou...</td>\n",
+       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
+       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024.23-621-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>sotomayor</td>\n",
+       "      <td>How do you respond to the concern that your pr...</td>\n",
+       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
+       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024.23-621-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>sotomayor</td>\n",
+       "      <td>You rely on legal dictionaries from the time o...</td>\n",
+       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
+       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024.23-621-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>sotomayor</td>\n",
+       "      <td>Don't some of this Court's precedents suggest ...</td>\n",
+       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
+       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024.23-621-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>sotomayor</td>\n",
+       "      <td>Can you think of any situations in which a pre...</td>\n",
+       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
+       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     transcript_id question_addressee    justice  \\\n",
+       "0  2024.23-621-t01         petitioner  sotomayor   \n",
+       "1  2024.23-621-t01         petitioner  sotomayor   \n",
+       "2  2024.23-621-t01         petitioner  sotomayor   \n",
+       "3  2024.23-621-t01         petitioner  sotomayor   \n",
+       "4  2024.23-621-t01         petitioner  sotomayor   \n",
+       "\n",
+       "                                       question_text  \\\n",
+       "0  Can you explain why you believe the Court shou...   \n",
+       "1  How do you respond to the concern that your pr...   \n",
+       "2  You rely on legal dictionaries from the time o...   \n",
+       "3  Don't some of this Court's precedents suggest ...   \n",
+       "4  Can you think of any situations in which a pre...   \n",
+       "\n",
+       "                                   opening_statement  \\\n",
+       "0  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
+       "1  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
+       "2  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
+       "3  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
+       "4  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
+       "\n",
+       "                                           full_text  \n",
+       "0  <speaker>John G. Roberts, Jr.</speaker><text> ...  \n",
+       "1  <speaker>John G. Roberts, Jr.</speaker><text> ...  \n",
+       "2  <speaker>John G. Roberts, Jr.</speaker><text> ...  \n",
+       "3  <speaker>John G. Roberts, Jr.</speaker><text> ...  \n",
+       "4  <speaker>John G. Roberts, Jr.</speaker><text> ...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_suffix = model_name.split('/')[1]\n",
+    "input_fp = f'../datasets/2024_llm_questions_{model_suffix}.csv'\n",
+    "out_fp = f'../datasets/2024_llm_questions_{model_suffix}_legalbench_classification.csv'\n",
+    "df_llm = pd.read_csv(input_fp)\n",
+    "df_llm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0438810-2425-4bc4-aeb6-391ad25eb608",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GENERATE FOR ALL\n",
+    "df_llm['legalbench_classification_raw'] = df_llm.apply(\n",
+    "    lambda row: classify_questions_legalbench(row['opening_statement'], row['question_text']), axis=1\n",
+    ")\n",
+    "df_llm.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f450dff9-ebbd-49e6-8985-803d2573f0bb",
+   "metadata": {},
+   "source": [
+    "Save file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a5758ed-d65f-4a49-9a62-f7030b947095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_llm.to_csv(out_fp, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b985c086-c6ce-4ee6-a1d7-b91b793f576d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Run on actual questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e72c321-3461-448a-92e9-5faa5d02c489",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Get labels for 2024 'coherent' questions"
    ]
@@ -504,7 +684,7 @@
    "id": "eeb67469-be54-462c-8291-f44682a8cc19",
    "metadata": {},
    "source": [
-    "### Run on incoherent"
+    "#### Run on incoherent"
    ]
   },
   {
@@ -830,102 +1010,19 @@
   {
    "cell_type": "markdown",
    "id": "a0017177-e81c-4c78-8651-9da2421e0179",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Test full workflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "26af5f09-9680-4c9c-889e-6d844102efa1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>transcript_id</th>\n",
-       "      <th>question_addressee</th>\n",
-       "      <th>justice</th>\n",
-       "      <th>question_text</th>\n",
-       "      <th>opening_statement</th>\n",
-       "      <th>full_text</th>\n",
-       "      <th>label</th>\n",
-       "      <th>legalbench_classification_raw</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024.23-621-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Clarence Thomas</td>\n",
-       "      <td>But I thought your argument hinged on a court...</td>\n",
-       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
-       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
-       "      <td>coherent</td>\n",
-       "      <td>{\\n\"classification\": \"Clarification\",\\n\"reason...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024.23-621-t01</td>\n",
-       "      <td>petitioner</td>\n",
-       "      <td>Elena Kagan</td>\n",
-       "      <td>Well, it's  -- it's true that it's only a lik...</td>\n",
-       "      <td>&lt;speaker&gt;Erika L. Maley&lt;/speaker&gt;&lt;text&gt; Mr. Ch...</td>\n",
-       "      <td>&lt;speaker&gt;John G. Roberts, Jr.&lt;/speaker&gt;&lt;text&gt; ...</td>\n",
-       "      <td>coherent</td>\n",
-       "      <td>{\\n\"classification\": \"Criticism\",\\n\"reasoning\"...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     transcript_id question_addressee          justice  \\\n",
-       "1  2024.23-621-t01         petitioner  Clarence Thomas   \n",
-       "3  2024.23-621-t01         petitioner      Elena Kagan   \n",
-       "\n",
-       "                                       question_text  \\\n",
-       "1   But I thought your argument hinged on a court...   \n",
-       "3   Well, it's  -- it's true that it's only a lik...   \n",
-       "\n",
-       "                                   opening_statement  \\\n",
-       "1  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
-       "3  <speaker>Erika L. Maley</speaker><text> Mr. Ch...   \n",
-       "\n",
-       "                                           full_text     label  \\\n",
-       "1  <speaker>John G. Roberts, Jr.</speaker><text> ...  coherent   \n",
-       "3  <speaker>John G. Roberts, Jr.</speaker><text> ...  coherent   \n",
-       "\n",
-       "                       legalbench_classification_raw  \n",
-       "1  {\\n\"classification\": \"Clarification\",\\n\"reason...  \n",
-       "3  {\\n\"classification\": \"Criticism\",\\n\"reasoning\"...  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # test on subsample (full workflow\n",
     "df_new = df_coherent.head(2).copy()\n",
@@ -937,22 +1034,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "9716de13-3506-4cfc-a4d2-5fe4eaaad884",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'classification': 'Clarification',\n",
-       " 'reasoning': \"The judge is seeking to understand the advocate's position, specifically whether their argument relies on a court ruling in favor of the prevailing party on the merits, which suggests the judge may be unclear about the advocate's stance or the scope of their proposed rule.\"}"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_resp = json.loads(df_new['legalbench_classification_raw'][1])\n",
     "sample_resp"
@@ -968,7 +1053,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "673c80e0-b93c-42e3-9c58-6ce34c1f8819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new = df_llm.head(2).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "1427736e-b7e6-4665-9afe-0d9c2d82e8e5",
    "metadata": {},
    "outputs": [],
@@ -981,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "ccd15324-ff21-48aa-a354-6c605db1fa32",
    "metadata": {},
    "outputs": [
@@ -991,32 +1086,28 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_opening = df_new.iloc[0]['opening_statement']\n",
-    "sample_question = df_new.iloc[0]['question_text']\n",
-    "messages = get_legalbench_classification_prompt(sample_opening, sample_question)\n",
-    "response = get_model_response(messages)\n",
     "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "1aea4f73-d75b-4332-af55-8c80e64ac7ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\n\"classification\": \"Clarification\",\\n\"reasoning\": \"The judge is seeking to understand the advocate\\'s position, specifically the relationship between a court ruling on the merits and the prevailing party, to ensure they accurately grasp the advocate\\'s argument.\"\\n}'"
+       "'{\\n    \"classification\": \"Clarification\",\\n    \"reasoning\": \"The question seeks to understand the advocate\\'s reasoning behind proposing a bright-line rule, specifically why they believe it is more important than considering potential inequities, which suggests the judge is trying to clarify the advocate\\'s position and the scope of the proposed rule.\"\\n    }'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,26 +1121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "e0a4da1b-2744-471f-856f-7aa2b830aaf7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'classification': 'Clarification',\n",
-       " 'reasoning': \"The judge is seeking to understand the advocate's position, specifically the relationship between a court ruling on the merits and the prevailing party, to ensure they accurately grasp the advocate's argument.\"}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "content_json_obj = json.loads(content)\n",
     "content_json_obj"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7b18b5-cbc6-4bdc-90ca-ab7fd1650ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
