add slicing script and start coherence judgments on historical data

--- a/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
+++ b/llm_generation_scripts/generate_coherence_judgments_della_inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,13 @@
     "import requests\n",
     "import json\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dce9f408-b45f-4931-ad60-6742bf290a63",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "56a2e675-e4f6-4d16-b39c-5c5e4520825b",
    "metadata": {},
    "outputs": [],
@@ -92,6 +93,351 @@
     "    # return json.dumps(questions)\n",
     "    return label\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0062014c-a0ff-4596-b480-74a443723ccd",
+   "metadata": {},
+   "source": [
+    "### Generate for historical data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4f17cd13-2877-4543-a6b0-76e1b3615752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### CHANGE THIS TO GENERATE FOR DIFF CHUNKS\n",
+    "year = 2023\n",
+    "chunk = 2\n",
+    "input_dir = f'../datasets/historical_questions/{year}/slices'\n",
+    "input_filename = f'{year}_{chunk}_questions_from_current_justices'\n",
+    "input_fp = f'{input_dir}/{input_filename}.csv'\n",
+    "\n",
+    "out_dir = f'../datasets/coherence/'\n",
+    "model = model_name.split('/')[-1]\n",
+    "out_subdir = os.path.join(out_dir, model)\n",
+    "os.makedirs(out_subdir, exist_ok=True)\n",
+    "out_fp = f'{out_subdir}/{input_filename}.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "55bbc543-6f66-4660-b44f-8db2535ab14b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>transcript_id</th>\n",
+       "      <th>question_addressee</th>\n",
+       "      <th>justice</th>\n",
+       "      <th>question_text</th>\n",
+       "      <th>opening_statement</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17393</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>That if she was coercing  --coercing them und...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17394</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>But that's at the summary judgment stage, rig...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17395</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>And what does that have to do with the NRA an...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17396</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>But what made it illegal for  -- NRA didn't h...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17397</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>Yeah. All right. Then stop. And why are the o...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0    transcript_id question_addressee                justice  \\\n",
+       "0       17393  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
+       "1       17394  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
+       "2       17395  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "3       17396  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "4       17397  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "\n",
+       "                                       question_text  \\\n",
+       "0   That if she was coercing  --coercing them und...   \n",
+       "1   But that's at the summary judgment stage, rig...   \n",
+       "2   And what does that have to do with the NRA an...   \n",
+       "3   But what made it illegal for  -- NRA didn't h...   \n",
+       "4   Yeah. All right. Then stop. And why are the o...   \n",
+       "\n",
+       "                                   opening_statement  year  \n",
+       "0  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
+       "1  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
+       "2  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
+       "3  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  \n",
+       "4  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(input_fp)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed39e4e9-156c-4ebd-9bd4-d8732bdcb633",
+   "metadata": {},
+   "source": [
+    "#### Run on slice and save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "99bd37f2-6228-4a14-b320-b5b6aa354694",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>transcript_id</th>\n",
+       "      <th>question_addressee</th>\n",
+       "      <th>justice</th>\n",
+       "      <th>question_text</th>\n",
+       "      <th>opening_statement</th>\n",
+       "      <th>year</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17393</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>That if she was coercing  --coercing them und...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17394</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Ketanji Brown Jackson</td>\n",
+       "      <td>But that's at the summary judgment stage, rig...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17395</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>And what does that have to do with the NRA an...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>incoherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17396</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>But what made it illegal for  -- NRA didn't h...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17397</td>\n",
+       "      <td>2023.22-842-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>Yeah. All right. Then stop. And why are the o...</td>\n",
+       "      <td>&lt;speaker&gt;David D. Cole&lt;/speaker&gt;&lt;text&gt; Mr. Chi...</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>coherent</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0    transcript_id question_addressee                justice  \\\n",
+       "0       17393  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
+       "1       17394  2023.22-842-t01         petitioner  Ketanji Brown Jackson   \n",
+       "2       17395  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "3       17396  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "4       17397  2023.22-842-t01         petitioner        Sonia Sotomayor   \n",
+       "\n",
+       "                                       question_text  \\\n",
+       "0   That if she was coercing  --coercing them und...   \n",
+       "1   But that's at the summary judgment stage, rig...   \n",
+       "2   And what does that have to do with the NRA an...   \n",
+       "3   But what made it illegal for  -- NRA didn't h...   \n",
+       "4   Yeah. All right. Then stop. And why are the o...   \n",
+       "\n",
+       "                                   opening_statement  year       label  \n",
+       "0  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  \n",
+       "1  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  \n",
+       "2  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023  incoherent  \n",
+       "3  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  \n",
+       "4  <speaker>David D. Cole</speaker><text> Mr. Chi...  2023    coherent  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['label'] = df.apply(\n",
+    "    lambda row: get_coherence_judgments(row['opening_statement'], row['question_text']), axis=1\n",
+    ")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b8b27229-0184-4109-80d7-6e7ce4c0ce99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(out_fp, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1c49c67-04f4-4e6d-9572-734f4af01535",
+   "metadata": {},
+   "source": [
+    "#### Sanity test with subsample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b40a031f-0c02-4636-8d9f-5ae6f6d04196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new = df.head(2).copy()\n",
+    "df_new['label'] = df_new.apply(\n",
+    "    lambda row: get_coherence_judgments(row['opening_statement'], row['question_text']), axis=1\n",
+    ")\n",
+    "df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "282618cc-5726-4aa2-9e62-47b9f91a47c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new.to_csv(out_fp, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd030b77-aa25-4763-8256-41a53228c919",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Generate for 2024"
    ]
   },
   {
@@ -446,7 +792,9 @@
   {
    "cell_type": "markdown",
    "id": "3a21a628-012d-4adc-8904-d750edc91a79",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Sanity test with `transcript_id` = `2024.23-217-t01`"
    ]
@@ -455,7 +803,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "672214b6-94bc-41c7-950b-c35e1cd5257e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
