--- a/llm_generation_scripts/generate_metacog_labels_della_inference.ipynb
+++ b/llm_generation_scripts/generate_metacog_labels_della_inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dce9f408-b45f-4931-ad60-6742bf290a63",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2e7a20db-ba35-4254-b174-e376059bd1e9",
    "metadata": {},
    "outputs": [],
@@ -148,8 +148,281 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e72c321-3461-448a-92e9-5faa5d02c489",
+   "id": "9396f449-6106-4867-9176-d5a15f0d8971",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Get labels for historical questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6d195346-33be-429d-8afe-f19d0a59203c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>transcript_id</th>\n",
+       "      <th>question_addressee</th>\n",
+       "      <th>justice</th>\n",
+       "      <th>question_text</th>\n",
+       "      <th>opening_statement</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2009.08-1529-t01</td>\n",
+       "      <td>respondent</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>Can you tell me how many PHS personnel work in...</td>\n",
+       "      <td>&lt;speaker&gt;Pratik A. Shah&lt;/speaker&gt;&lt;text&gt;Mr. Chi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2009.08-1529-t01</td>\n",
+       "      <td>respondent</td>\n",
+       "      <td>Sonia Sotomayor</td>\n",
+       "      <td>--And is there a reason Congress would want to...</td>\n",
+       "      <td>&lt;speaker&gt;Pratik A. Shah&lt;/speaker&gt;&lt;text&gt;Mr. Chi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2009.08-1529-t01</td>\n",
+       "      <td>respondent</td>\n",
+       "      <td>Samuel A. Alito, Jr.</td>\n",
+       "      <td>Are they paid less than other -- than other Fe...</td>\n",
+       "      <td>&lt;speaker&gt;Pratik A. Shah&lt;/speaker&gt;&lt;text&gt;Mr. Chi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2009.08-1529-t01</td>\n",
+       "      <td>respondent</td>\n",
+       "      <td>Samuel A. Alito, Jr.</td>\n",
+       "      <td>If section 2679(b)(2), instead of saying parag...</td>\n",
+       "      <td>&lt;speaker&gt;Pratik A. Shah&lt;/speaker&gt;&lt;text&gt;Mr. Chi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2009.08-1529-t01</td>\n",
+       "      <td>petitioner</td>\n",
+       "      <td>John G. Roberts, Jr.</td>\n",
+       "      <td>You're not abandoning it; you're taking it fur...</td>\n",
+       "      <td>&lt;speaker&gt;Elaine J. Goldenberg&lt;/speaker&gt;&lt;text&gt;I...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     transcript_id question_addressee               justice  \\\n",
+       "0           0  2009.08-1529-t01         respondent       Sonia Sotomayor   \n",
+       "1           1  2009.08-1529-t01         respondent       Sonia Sotomayor   \n",
+       "2           2  2009.08-1529-t01         respondent  Samuel A. Alito, Jr.   \n",
+       "3           3  2009.08-1529-t01         respondent  Samuel A. Alito, Jr.   \n",
+       "4           4  2009.08-1529-t01         petitioner  John G. Roberts, Jr.   \n",
+       "\n",
+       "                                       question_text  \\\n",
+       "0  Can you tell me how many PHS personnel work in...   \n",
+       "1  --And is there a reason Congress would want to...   \n",
+       "2  Are they paid less than other -- than other Fe...   \n",
+       "3  If section 2679(b)(2), instead of saying parag...   \n",
+       "4  You're not abandoning it; you're taking it fur...   \n",
+       "\n",
+       "                                   opening_statement  \n",
+       "0  <speaker>Pratik A. Shah</speaker><text>Mr. Chi...  \n",
+       "1  <speaker>Pratik A. Shah</speaker><text>Mr. Chi...  \n",
+       "2  <speaker>Pratik A. Shah</speaker><text>Mr. Chi...  \n",
+       "3  <speaker>Pratik A. Shah</speaker><text>Mr. Chi...  \n",
+       "4  <speaker>Elaine J. Goldenberg</speaker><text>I...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_dir = \n",
+    "input_fp = '../datasets/questions_from_current_justices.csv'\n",
+    "all_qs_df = pd.read_csv(input_fp)\n",
+    "all_qs_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5a0cde16-e2f1-4287-8054-3d4c353c9b2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 38492 entries, 0 to 38491\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   Unnamed: 0          38492 non-null  int64 \n",
+      " 1   transcript_id       38492 non-null  object\n",
+      " 2   question_addressee  38492 non-null  object\n",
+      " 3   justice             38492 non-null  object\n",
+      " 4   question_text       38492 non-null  object\n",
+      " 5   opening_statement   38417 non-null  object\n",
+      " 6   year                38492 non-null  object\n",
+      "dtypes: int64(1), object(6)\n",
+      "memory usage: 2.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_qs_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "771ac18f-872b-4394-891c-a95423dae4aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2023    4598\n",
+       "2022    4429\n",
+       "2021    3625\n",
+       "2020    3095\n",
+       "2018    2598\n",
+       "2019    2106\n",
+       "2010    2029\n",
+       "2011    1829\n",
+       "2012    1765\n",
+       "2015    1688\n",
+       "2017    1674\n",
+       "2009    1564\n",
+       "2016    1545\n",
+       "2013    1545\n",
+       "2014    1084\n",
+       "2008     961\n",
+       "2007     900\n",
+       "2006     767\n",
+       "2005     574\n",
+       "1991      21\n",
+       "1994      15\n",
+       "1996      14\n",
+       "1998      13\n",
+       "1997      12\n",
+       "1992       9\n",
+       "2002       8\n",
+       "1999       7\n",
+       "2001       7\n",
+       "2000       4\n",
+       "1995       3\n",
+       "1993       3\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def extract_year(id):\n",
+    "    return id.split('.')[0]\n",
+    "\n",
+    "all_qs_df['year'] = all_qs_df['transcript_id'].apply(extract_year)\n",
+    "all_qs_df['year'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad23c423-d01e-4111-b771-bb8fdaade719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "base_output_directory = '../datasets/historical_questions/'\n",
+    "\n",
+    "# Read the input CSV file\n",
+    "df = pd.read_csv(input_csv_path)\n",
+    "\n",
+    "# Group the dataset by year and save each group to a separate subdirectory\n",
+    "for year, group in df.groupby('year'):\n",
+    "    # Create a subdirectory for the current year\n",
+    "    year_directory = os.path.join(base_output_directory, str(year))\n",
+    "    os.makedirs(year_directory, exist_ok=True)\n",
+    "    \n",
+    "    # Define the output file path\n",
+    "    output_path = os.path.join(year_directory, f'{year}_questions_from_current_justices.csv')\n",
+    "    \n",
+    "    # Save the slice to the file\n",
+    "    group.to_csv(output_path, index=False)\n",
+    "    print(f\"Saved questions for year {year} to {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c8e64ef-257a-443d-966d-21333964507d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb1fb3dd-83cd-4c25-bd73-81c028b5409b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2781b9a-b90e-488a-8f49-f78156428d1a",
+   "metadata": {},
+   "source": [
+    "### Get labels for 2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e72c321-3461-448a-92e9-5faa5d02c489",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Get labels for 2024 'coherent' questions"
    ]
@@ -281,7 +554,7 @@
     }
    ],
    "source": [
-    "input_fp = '../datasets/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruct.csv'\n",
+    "input_fp = '../datasets/2024_all_questions_coherence_labeled_Meta-Llama-3.1-70B-Instruc.csv'\n",
     "df = pd.read_csv(input_fp)\n",
     "df.head()"
    ]
@@ -466,9 +739,12 @@
   {
    "cell_type": "markdown",
    "id": "3ef8860e-156c-4463-bf89-23f9c45f5281",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "### Run on incoherent"
+    "#### Get labels for 2024 'incoherent' questions"
    ]
   },
   {
